--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <nav>
+      <h2>Navbar</h2>
+    </nav>
     <h2>Hello world</h2>
   </body>
 </html>
